--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ extrato.pdf
 # remove txt files
 *.txt
 
+# remove csv files
+*.csv
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
